2004-06-05  Benjamin Otte  <otte@gnome.org>

	* configure.ac:
	* ext/kio/Makefile.am:
	  check for qt's moc preprocessor explicitly and use it

2004-06-03  Thomas Vander Stichele  <thomas (at) apestaart (dot) org>

	* gst/tcp/gsttcp.c: (gst_tcp_socket_write):
	  don't get a signal for EPIPE on socket writes
	  (somebody check if this works on other platforms)

2004-06-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* ext/alsa/gstalsaclock.c: (gst_alsa_clock_get_type):
	* ext/alsa/gstalsasrc.c: (gst_alsa_src_loop):
          check error condition on available samples correctly

2004-06-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* ext/alsa/gstalsasrc.c: (gst_alsa_src_get_time):
          avoid a segfault
	* gst/tcp/gsttcp.c: (gst_tcp_socket_write), (gst_tcp_socket_read),
	(gst_tcp_gdp_read_header), (gst_tcp_gdp_read_caps):
	* gst/tcp/gsttcpserversrc.c: (gst_tcpserversrc_gdp_read_caps),
	(gst_tcpserversrc_gdp_read_header):
         use ssize_t over size_t since the former is signed and thus the
         check for error codes can work

2004-06-02  Wim Taymans  <wim@fluendo.com>

	reviewed by: Johan

	* gst/multipart/multipartmux.c: (gst_multipart_mux_class_init),
	(gst_multipart_mux_loop):
	Oops

2004-06-02  Wim Taymans  <wim@fluendo.com>

	* gst/multipart/multipartmux.c: (gst_multipart_mux_class_init),
	(gst_multipart_mux_init), (gst_multipart_mux_loop),
	(gst_multipart_mux_get_property), (gst_multipart_mux_set_property),
	(gst_multipart_mux_change_state):
	Added configurable boundary specifier, added the value as a
	caps field as well.

2004-06-02  Zaheer Abbas Merali <zaheerabbas@merali.org>

	* gst/tcp/gsttcp.c:
	* gst/tcp/gsttcpclientsrc.c:
	* gst/tcp/gsttcpclientsrc.h:
	* gst/tcp/gsttcpserversrc.c:
	  - portability fix, to compile on OSX
            (fixes #143146)

	* sys/osxaudio/gstosxaudioelement.c:
	* sys/osxaudio/gstosxaudiosink.c:
	* sys/osxaudio/gstosxaudiosrc.c:
	  - compilation warnings on OSX
            (fixes #143153)
